# Container-Migration-Solution-Accelerator

./: ContainerMigrationTool.java  README.md  TRANSPARENCY_FAQ.md  azure.yaml  azure.yml
.github/: CODEOWNERS  (+1 more)
src/backend-api/: .dockerignore  .gitignore  Dockerfile  pyproject.toml  pytest.ini  test_config.py
src/backend-api/.devcontainer/: devcontainer.json
src/backend-api/src/app/: .env.example  __init__.py  application.py  main.py
src/backend-api/src/app/routers/: http_probes.py  router_debug.py  router_files.py  router_process.py
src/backend-api/src/app/samples/: concrete_services.py  router_one.py  router_two.py
src/backend-api/src/tests/application/: test_app_configuration.py  test_application_context.py  test_dependency_injection.py
src/backend-api/src/tests/azure/: test_application_configuration.py
src/backend-api/src/tests/base/: test_applicatuion_base.py
src/backend-api/src/tests/http/: api_test.http
src/backend-api/src/tests/model/: test_model_process.py
src/processor/: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml
src/processor/.devcontainer/: devcontainer.json
src/processor/src/: main.py  main_service.py
src/processor/src/agents/: agent_info_util.py
src/processor/src/agents/azure_expert/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/eks_expert/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/gke_expert/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/qa_engineer/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/technical_architect/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/technical_writer/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/agents/yaml_expert/: agent_info.py  prompt-analysis.txt  prompt-design.txt  prompt-documentation.txt  prompt-yaml.txt
src/processor/src/libs/application/: application_configuration.py  application_context.py
src/processor/src/libs/azure/: app_configuration.py
src/processor/src/libs/base/: AppConfiguration.py  ApplicationBase.py  KernelAgent.py  SKBase.py  SKLogicBase.py  __init__.py
src/processor/src/libs/models/: failure_context.py  orchestration_models.py
src/processor/src/libs/processes/: __init__.py  aks_migration_process.py
src/processor/src/libs/reporting/: __init__.py  migration_report_generator.py
src/processor/src/services/: migration_service.py  queue_service.py  retry_manager.py
src/processor/src/utils/: agent_builder.py  agent_selection_parser.py  agent_telemetry.py  chat_completion_retry.py  console_util.py  credential_util.py  error_classifier.py  logging_utils.py  mcp_context.py  parallel_task_executor.py  termination_circuit_breaker_util.py  tool_tracking.py
(+188 files in other folders)
