[project]
name = "processor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.14",
    "art>=6.5",
    "azure-ai-agents>=1.2.0b1",
    "azure-ai-inference>=1.0.0b9",
    "azure-ai-projects>=1.0.0b10",
    "azure-appconfiguration>=1.7.1",
    "azure-identity>=1.24.0",
    "azure-storage-queue>=12.13.0",
    "fastmcp>=2.11.3",
    "jinja2>=3.1.6",
    "mcp>=1.13.1",
    "openai>=1.99.6",
    "psutil>=7.0.0",
    "pytz>=2023.3",
    "sas-cosmosdb>=0.1.4",
    "semantic-kernel>=1.36.2",
]

[dependency-groups]
dev = ["pre-commit>=4.0.1", "ruff>=0.8.6"]

[tool.ruff]
# Set the target Python version
target-version = "py312"

# Enable auto-fixing for all fixable rules
fix = true

# Same as VS Code's default line length
line-length = 88

[tool.ruff.lint]
# Enable commonly used rule sets
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort (import sorting)
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
]

# Ignore specific rules that might conflict with Pylance
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E203",  # Whitespace before ':' (conflicts with black/ruff formatter)
    "F401",  # Imported but unused (when using TYPE_CHECKING)
    "F811",  # Redefined while unused (common with TYPE_CHECKING patterns)
]

# Auto-fix these specific whitespace and formatting issues
fixable = [
    "E",     # pycodestyle errors (including whitespace)
    "W",     # pycodestyle warnings (including whitespace)
    "I",     # isort (import sorting)
    "F401",  # Remove unused imports
    "UP",    # pyupgrade fixes
]

[tool.ruff.lint.isort]
# Configure import sorting to work well with your project
known-first-party = ["src"]
force-sort-within-sections = true
# Separate TYPE_CHECKING imports
split-on-trailing-comma = true

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Prefer double quotes for docstrings
docstring-code-format = true

# Remove trailing whitespace
skip-magic-trailing-comma = false
